--- a/leisure/src/main/resources/templates/perfil.html
+++ b/leisure/src/main/resources/templates/perfil.html
@@ -297,25 +297,21 @@
         <!-- MEUS DADOS -->
         <section class="meusdados hidden">
             <div class="meusdados__imagem">
-			<form class="row g-3 d-flex d-inline-block" method="post" 
-					enctype="multipart/form-data">
-					<input name="id" th:value="${usuario.id}" hidden>
-						<div id="imagem-circle" class="col-sm-12 d-block text-center">
-							<div id="imagemUsuario" class="mx-auto">								
-								<span>
-									<img th:src="@{/usuario/imagem/{id} (id=${usuario.id})}"></img>
-								</span>
-								</div>
-								<label for="input-file" id="input-imagem" class="d-block mt-4 mb-4 mx-auto">Alterar imagem <i
-										class="fa-thin fa-pen-to-square"></i></label>
-									<input id="input-file"name="fotoPerfil"type="file"accept="image /*">
-										<input type="submit"value="Enviar">
-											</div>
-											</form> 
-               <label for="meusdadosImagem"></label>
-                <span>Alterar imagem</span>
-                <input type="file" name="foto" id="meusdadosImagem"> 
-            </div>
+			<form class="row g-3 d-flex d-inline-block" method="post" enctype="multipart/form-data" th:action="@{/usuario/salvar-foto}">
+				<input name="id" th:value="${usuario.id}" id="id_usuario" hidden>
+				<input name="nomeImagem" th:value="${usuario.nomeImagem}" id="nomeImagem" hidden>
+				<div id="imagem-circle" class="col-sm-12 d-block text-center">
+					<div id="imagemUsuario" class="mx-auto">
+					</div>
+					<label for="input-file" id="input-imagem" class="d-block mt-4 mb-4 mx-auto">Alterar imagem<i
+							class="fa-thin fa-pen-to-square">
+						</i></label>
+					<input id="input-file" name="file" type="file" accept="image /*">
+					<button type="submit">Enviar</button>
+				</div>
+			</form>
+			
+			</div>
             <form class="meusdados__container">
                 <div class="meusdados__container__conteudo">
                     <label for="meusdadosNome">Nome completo:</label>
