--- a/leisure/src/main/resources/templates/index.html
+++ b/leisure/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 <head th:replace="~{fragments/head :: head}"></head>
 <body class="body">
     <!-- TROCAR TEMA -->
-    <div th:replace="~{fragments/trocarTema :: trocarTema}"></div>
+    <!-- <div th:replace="~{fragments/trocarTema :: trocarTema}"></div> -->
 
     <!-- CABEÇALHO -->
     <header th:replace="~{fragments/cabecalho :: cabecalho}"></header>
@@ -231,7 +231,7 @@
                             <img class="time__card-imagem" src="/img/imagem/Marcos.jpeg" alt="Foto do Marcos">
                             <div class="time__card__info">
                                 <h3 class="titulo__terciario">Marcos</h3>
-                                <p class="time_card__info-texto">Dev movile / QA</p>
+                                <p class="time_card__info-texto">Dev mobile / QA</p>
                             </div>
                         </div>
                     </div>
