--- a/leisure/src/main/resources/static/style/header.css
+++ b/leisure/src/main/resources/static/style/header.css
@@ -1,4 +1,3 @@
-
 .cabecalho{
     background-color: white;
     padding: 1em 0;
@@ -12,6 +11,10 @@
 .container_hamburguer{
     display: block;
 }
+.container__usuario span{
+    display: none;
+}
+
 .container__rotulo, .container__rotulo__login{
     display: flex;
     padding: 1em;
@@ -24,14 +27,23 @@
 
 .lista-menu{
     text-transform: uppercase;
-    display: none;
+    /* display: none; */
+    top: 0;
+    left: -600px;
     position: absolute;
     background-color: white;
     width: 60vw;
     margin-top: 16px;
     z-index: 2;
     padding-bottom: 1em;
-}   
+    transition: 0.5s;
+}
+.home{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.75em;
+}
+
 .btn-submenu > span, .btn-download > span{
     font-weight: 700;
     margin: 1em 0 0.25em 0;
@@ -64,7 +76,9 @@
 }
 
 #menu:checked ~ .lista-menu{
-    display: block;
+    /* display: block; */
+    left: 0;
+    transition: 0.5s;
 }
 .container__link{
     text-decoration: none;
@@ -72,6 +86,9 @@
 }
 .container__link i{
     margin-left: 0.5em;
+}
+.container__pesquisa{
+    display: none;
 }
 .container__pesquisa-barra{
     background: transparent;
@@ -88,7 +105,7 @@
     text-align: center;
 }
 
-/* -------------------------------------- MEDIA SCREEN MIN 768px -------------------------------------- */
+/*  MEDIA SCREEN MIN 768px  */
 @media screen and (min-width: 768px){
     .cabecalho{
         display: flex;
@@ -100,6 +117,9 @@
     }
     .container__usuario{
         display: flex;
+        position: absolute;
+        right: 2em;
+        top: 2em;
         column-gap: 0.5em;
         align-items: center;
         color: white;
@@ -109,18 +129,28 @@
         padding: 0 0.5em 0 0.25em;
         border-radius: 22px;
         background: var(--cor-font-destaque);
-        box-shadow: 5px 5px 10px var(--cor-font-destaque);
+        box-shadow: 3px 2px 10px var(--cor-font-destaque);
     }
-    .container__usuario{
+    /* .container__usuario{
         position: absolute;
         right: 2em;
         top: 2em;
+    } */
+    .container__usuario span{
+        display: block;
     }
     .lista-menu{
         display: flex;
         justify-content: center;
         position: relative;
         width: 100vw;
+        left: 0;
+    }
+    .home{
+        margin-top: 0em;
+    }
+    .home label{
+        display: none;
     }
     .lista-menu__item{
         padding: 0.75em 0.5em;
@@ -133,9 +163,12 @@
     .lista-menu__sublista-item{
         padding: 0.75em 1em 0.75em 0.75em;
     }
+    .container__pesquisa{
+        display: block;
+    }
     
 }
-/* -------------------------------------- MEDIA SCREEN MIN 1024px -------------------------------------- */
+/*  MEDIA SCREEN MIN 1024px  */
 @media screen and (min-width: 1024px){
     .container__pesquisa-barra{
         font-size: 1em;
@@ -156,7 +189,7 @@
         font-size: 1em;
     }
 }
-/* -------------------------------------- MEDIA SCREEN MIN 1920px -------------------------------------- */
+/*  MEDIA SCREEN MIN 1920px  */
 @media screen and (min-width: 1920px){
     .container__pesquisa-barra{
         font-size: 1.5em;
@@ -176,184 +209,4 @@
     .container__usuario{
         font-size: 1.5em;
     }
-
-.cabecalho{
-    background-color: white;
-    padding: 1em 0;
-    display: flex;
-    justify-content: space-between;
-}
-.cabecalho__container, .cabecalho__navegacao{
-    display: flex;
-    align-items: center;
-}
-.container_hamburguer{
-    display: block;
-}
-.container__rotulo, .container__rotulo__login{
-    display: flex;
-    padding: 1em;
-    cursor: pointer;
-}
-
-#menu{
-    display: none;
-}
-
-.lista-menu{
-    text-transform: uppercase;
-    display: none;
-    position: absolute;
-    background-color: white;
-    width: 60vw;
-    margin-top: 16px;
-    z-index: 2;
-    padding-bottom: 1em;
-}   
-.btn-submenu > span, .btn-download > span{
-    font-weight: 700;
-    margin: 1em 0 0.25em 0;
-}
-.btn-submenu i, .btn-download i{
-    margin-left: 0.5em;
-}
-
-.btn-submenu, .btn-download, .lista-menu__item{
-    padding: 0.75em 1em;
-    font-size: 0.75em;
-    cursor: pointer;
-}
-.lista-menu__sublista-categoria, .lista-menu__sublista-download{
-    text-transform: uppercase;
-    background-color: white;
-    width: 50vw;
-    margin-top: 16px;
-    z-index: 2;
-    padding-bottom: 1em;
-}
-.lista-menu__sublista-item{
-    display: flex;
-    align-items: center;
-    padding: 0.75em 1em;
-}
-.lista-menu__sublista-item > a{
-    text-decoration: none;
-    color: var(--cor-font-principal);
-}
-
-#menu:checked ~ .lista-menu{
-    display: block;
-}
-.container__link{
-    text-decoration: none;
-    color: var(--cor-font-principal);
-}
-.container__link i{
-    margin-left: 0.5em;
-}
-.container__pesquisa-barra{
-    background: transparent;
-    width: 60vw;
-    padding: 0.5em 1em;
-    border: none;
-    border-bottom: 1px solid lightgray;
-    font-family: var(--cor-font-principal);
-}
-.container__pesquisa-barra:focus{
-    outline: 0;
-}
-.container__pesquisa-barra::placeholder{
-    text-align: center;
-}
-
-/* -------------------------------------- MEDIA SCREEN MIN 768px -------------------------------------- */
-@media screen and (min-width: 768px){
-    .cabecalho{
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-    }
-    .cabecalho__container .container__rotulo{
-        display: none;
-    }
-    .container__usuario{
-        display: flex;
-        column-gap: 0.5em;
-        align-items: center;
-        color: white;
-        text-align: center;
-        height: 2.5em;
-        width: auto;
-        padding: 0 0.5em 0 0.25em;
-        border-radius: 22px;
-        background: var(--cor-font-destaque);
-        box-shadow: 5px 5px 10px var(--cor-font-destaque);
-    }
-    .container__usuario{
-        position: absolute;
-        right: 2em;
-        top: 2em;
-    }
-    .lista-menu{
-        display: flex;
-        justify-content: center;
-        position: relative;
-        width: 100vw;
-    }
-    .lista-menu__item{
-        padding: 0.75em 0.5em;
-    }
-    .lista-menu__sublista-categoria, .lista-menu__sublista-download{
-        width: auto;
-        position: absolute;
-        border-radius: 10px;
-    }
-    .lista-menu__sublista-item{
-        padding: 0.75em 1em 0.75em 0.75em;
-    }
-    
-}
-/* -------------------------------------- MEDIA SCREEN MIN 1024px -------------------------------------- */
-@media screen and (min-width: 1024px){
-    .container__pesquisa-barra{
-        font-size: 1em;
-    }
-    .container__pesquisa-barra::placeholder{
-        font-size: 1em;
-    }
-    .lista-menu__item{
-        font-size: 1em;
-    }
-    .container__link{
-        font-size: 1em;
-    }
-    .lista-menu__item span{
-        font-size: 1em;
-    }
-    .container__usuario{
-        font-size: 1em;
-    }
-}
-/* -------------------------------------- MEDIA SCREEN MIN 1920px -------------------------------------- */
-@media screen and (min-width: 1920px){
-    .container__pesquisa-barra{
-        font-size: 1.5em;
-    }
-    .container__pesquisa-barra::placeholder{
-        font-size: 1.5em;
-    }
-    .lista-menu__item{
-        font-size: 1.5em;
-    }
-    .lista-menu__item span{
-        font-size: 1.25em;
-    }
-    .container__link{
-        font-size: 1.25em;
-    }
-    .container__usuario{
-        font-size: 1.5em;
-    }
-/* 2e9d0d9828207d2b8e791388e79afe50cb0c9527*/
-}
 }
