--- a/leisure/src/main/resources/static/style/profile-anuncio.css
+++ b/leisure/src/main/resources/static/style/profile-anuncio.css
@@ -1,7 +1,3 @@
-.hidden{
-    display: none;
-}
-
 .anuncio {
     padding: 1em;
 }
@@ -28,16 +24,23 @@
     border-radius: 10px;
 }
 .anuncio__card__conteudo{
+    display: flex;
+    align-items: center;
+    column-gap: 0.5em;
     width: 100%;
     margin: 0.5em 0;
 }
 .anuncio__card__conteudo label{
-    font-weight: 600;
+    font-weight: 500;
     font-size: 0.75em;
 }
 .anuncio__card__conteudo input{
     width: 100%;
     border: none;
+    background: transparent;
+}
+.anuncio__card__conteudo input:focus{
+    outline: 0;
 }
 .anuncio__card__botao{
     margin: 1em 0;
@@ -52,6 +55,40 @@
     border: none;
     border-radius: 5px;
     background: var(--cor-font-destaque);
+}
+.anuncio__card__botao button:hover{
+    background-color: #00FF00;
+    transition: 0.2s;
+}
+
+@media screen and (min-width: 768px){
+    .anuncio {
+        padding: 1em 5em;
+    }
+    .anuncio__card{
+        display: flex;
+        flex-direction: row;
+        column-gap: 2em;
+        align-items: center;
+        padding: 2em 1em;
+    }
+    .anuncio__card__imagem{
+        width: 25%;
+    }
+    .anuncio__card__form{
+        padding: 2em 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 0.5em;
+    }
+    .anuncio__card__conteudo{
+        margin: 0.25em;
+    }
+    .anuncio__card__botao{
+        margin: 1em ;
+        display: flex;
+        justify-content: center;
+    }
 }
 
 @media screen and (min-width: 1024px){
