--- a/leisure/src/main/resources/static/style/profile-meusdados.css
+++ b/leisure/src/main/resources/static/style/profile-meusdados.css
@@ -11,20 +11,22 @@
     row-gap: 2em;
     font-family: var(--font-principal);
 }
-.meusdados__imagem label{
+
+#visualizarFoto{
     box-shadow: 7px 10px 10px rgba(0, 0, 0, 0.5);
     border-radius: 50%;
     background-size: cover;
     background-repeat: no-repeat;
     width: 200px;
     height: 200px;
+    border: 1px solid lightgray;
 }
 .meusdados__imagem input{
     margin: 2em 0;
-    display: none;
+    /*display: none;*/
 }
 .meusdados__container__conteudo{
-    margin: em 0;
+    margin: 0;
     display: flex;
     flex-direction: column;
 }
@@ -33,7 +35,37 @@
     border: none;
     border-bottom: 1px solid lightgray;
     margin: 2em 0;
+    background: transparent;
 }
 .meusdados__container__conteudo input:focus{
     outline: 0;
+}
+
+@media screen and (min-width: 768px){
+    
+    .meusdados__container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 1em 0;
+    }
+    .meusdados__container__form{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 1em;
+        margin-left: auto;
+        margin-bottom: 2em;
+    }
+    .meusdados__container__conteudo{
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        column-gap: 0.5em;
+        margin: 0.5em 0;
+    }
+    .meusdados__container__conteudo input{
+        border: none;
+        margin: 0;
+    }
 }
