--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -5,12 +5,15 @@
             <input type="checkbox" id="menu">
             <label for="menu">
                 <span class="container__rotulo">
-                    <i class="fa-light fa-bars fa-2xl"></i>
+                    <i class="fa-light fa-bars fa-xl"></i>
                 </span>
             </label>
             <ul class="lista-menu">
-                <li class="lista-menu__item">
+                <li class="lista-menu__item home">
                     <a class="container__link" href="/">Home</a>
+                    <label for="menu">
+                        <i class="fa-light fa-xmark fa-2xl"></i>
+                    </label>
                 </li>
                 <li class="lista-menu__item btn-submenu">
                     <span>Categorias <i class="arrow-replace-categoria fa-solid fa-sm fa-chevron-right"></i></span>
@@ -82,6 +85,7 @@
                         </li>
                     </ul>
                 </li>
+                <div th:replace="~{fragments/trocarTema :: trocarTema}"></div>
             </ul>
         </div>
     </nav>
@@ -128,7 +132,7 @@
                                     <label for="cadastroCpf">CPF</label>
                                     <input type="password" name="cpf" id="cadastroCpf">
                                 </div>
-                                <!--<form method="get" action="."> -->
+                              <!--  <form method="get" action=".">
                                 <div class="cadastro__container__conteudo">
                                     <label>Cep</label>
                                     <input name="cep" type="text" value="" maxlength="9" onblur="pesquisacep(this.value);" />
@@ -137,15 +141,14 @@
                                     <label>Número</label>
                                     <input name="numero" type="text"/>
                                 </div>
-                                <button type="submit" class="btn btn-primary">Cadastrar</button>
-                            </form>
+                            </form> -->
                             <div class="modal-body__botoes d-flex flex-column gap-2 justify-content-center">
                                 <!-- <button type="button" class="btn btn-secondary btn-login">Login</button> -->
-                               
+                                <button type="submit" class="btn btn-primary">Cadastrar</button>
                                 <span class="btn-login">Já tenho cadastro</span>
                             </div>
                             
-                           <!-- </form>-->
+                            </form>
                         </div>
                     </div>
                     <div class="modal-content modal__login hidden">
@@ -154,7 +157,7 @@
                             <h2>Login</h2>
                         </div>
                         <div class="modal-body">
-                            <form class="cadastro__container" method="post" th:action="@{/usuario/login}">
+                            <form class="cadastro__container" method="post"th:action="@{/usuario/login}">
                                 <div class="cadastro__container__conteudo">
                                     <label for="loginEmail">E-mail</label>
                                     <input type="email" name="username" id="loginEmail">
@@ -193,16 +196,19 @@
                     <a class="container__link" href="/">Home</a>
                 </li>
                 <li class="lista-menu__item btnAnunciar">
-                    <!-- <a class="container__link btnAnunciar" href="#">Anunciar</a> -->
-                    <span class="container__link">Anunciar</span>
+                    <a class="container__link btnAnunciar" href="/perfil/anunciar">
+                        <span>Anunciar</span>
+                    </a>
                 </li>
                 <li class="lista-menu__item btnMeusAnuncios">
-                    <!-- <span>Meus Anuncios</span> -->
-                    <span class="container__link">Meus anuncios</span>
+                    <a class="container__link btnAnunciar" href="/perfil/anuncio">
+                        <span>Meus anuncios</span>
+                    </a>
                 </li>
                 <li class="lista-menu__item btnMeusDados">
-                    <!-- <a class="container__link" href="#">Meus Dados</a> -->
-                    <span class="container__link">Meus dados</span>
+                    <a class="container__link" href="/perfil/meusdados">
+                        <span>Meus Dados</span>
+                    </a>
                 </li>
                 <li class="lista-menu__item btn-download">
                     <span>Nosso App</span>
@@ -226,7 +232,7 @@
                 </li>
                 <li class="lista-menu__item">
                     <!-- <a class="container__link" href="#">Sair</a> -->
-                   <a th:href="@{/usuario/logout}"><span class="container__link">Sair</span></a> 
+                    <a th:href="@{/usuario/logout}"><span class="container__link">Sair</span></a>
                 </li>
             </ul>
         </div>
@@ -235,10 +241,12 @@
         <input class="container__pesquisa-barra" type="search" name="pesquisa" id="pesquisa" placeholder="Digite sua pesquisa">
     </div>
     <div class="cabecalho__navegacao">
-        <div class="container__usuario">
-            <i class="fa-light fa-circle-user fa-2xl"></i>
-            <span></span>
-        </div>
+        <span class="container__rotulo">
+            <div class="container__usuario">
+                <i class="fa-light fa-circle-user fa-2xl"></i>
+                <span></span>
+            </div>
+        </span>
     </div>
 </header>
 
