--- a/leisure/src/main/resources/templates/fragments/trocarTema.html
+++ b/leisure/src/main/resources/templates/fragments/trocarTema.html
@@ -1,4 +1,6 @@
-<div th:fragment="trocarTema" class="btnTema">
+<div th:fragment="trocarTema" class="trocar__tema">
+    <!-- <img class="logo__leisure" src="/img/imagem/logo-leisure-white.svg" alt="Logo Leisure"> -->
+    <!-- <img class="logo__leisure hidden" src="/img/imagem/logo-leisure-dark.svg" alt="Logo Leisure"> -->
     <label class="btnTema" for="change-tema">
         <i class="fa-solid fa-sun"></i>
         <i class="fa-solid fa-moon hidden"></i>
