--- a/leisure/src/main/resources/templates/fragments/profile.html
+++ b/leisure/src/main/resources/templates/fragments/profile.html
@@ -303,7 +303,8 @@
 		</div>
 	</form>
     
-    <form class="meusdados__container">
+    <form class="meusdados__container" th:action="@{/usuario/atualizacao}" method="post">
+        <input name="id" th:value="${usuario.id}" id="id_usuario" hidden>
         <div class="meusdados__container__form">
             <div class="meusdados__container__conteudo">
                 <label for="meusdadosNome">Nome completo:</label>
@@ -317,10 +318,6 @@
                 <label for="meusdadosEmail">E-mail:</label>
                 <input type="email" name="email" id="meusdadosEmail" th:value="${usuario.email}" disabled>
             </div>
-       <!--     <div class="meusdados__container__conteudo">
-                <label for="meusdadosSenha">Senha:</label>
-                <input type="password" name="senha" id="meusdadosSenha">
-            </div> -->
             <div class="meusdados__container__conteudo">
                 <label for="dadoTelefone">Telefone:</label>
                 <input type="tel" name="telefone" id="dadoTelefone" th:value="${usuario.telefone}">
@@ -328,30 +325,7 @@
             <div class="meusdados__container__conteudo">
                 <label for="meusdadosCpf">CPF</label>
                 <input type="password" name="cpf" id="meusdadosCpf" th:value="${usuario.cpf}" disabled>
-            </div>
-    
-           <!-- <div class="meusdados__container__conteudo">
-                <label>Cep:</label>
-                <input name="cep" type="text" id="meusdadosCep" value="" maxlength="9" onblur="pesquisacep(this.value);" />
-            </div>
-            <div class="meusdados__container__conteudo">
-                <label>Rua:</label>
-                <input name="rua" type="text" id="meusdadosRua"  />
-            </div>
-            <div class="meusdados__container__conteudo">
-                <label>Bairro:</label>
-                <input name="bairro" type="text" id="meusdadosBairro"  />
-            </div>
-            <div class="meusdados__container__conteudo">
-                <label>Cidade:</label>
-                <input name="cidade" type="text" id="meusdadosCidade"  />
-            </div>
-            <div class="meusdados__container__conteudo">
-                <label>Estado:</label>
-                <input name="uf" type="text" id="meusdadosUf" />
-            </div>
-        </div> -->
-        
+            </div>   
         <div class="anuncio__card__botao">
             <button type="submit">
                 <span>Salvar alterações</span>
