--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -18,7 +18,7 @@
                         <span class="cabecalho__container-logo">
                             <a href="/leisure/index"><img src="/img/imagem/logo-leisure.svg" alt="logo leisure imoveis"></a>
                         </span>
-                        <label for="menu">
+                        <label>
                             <i class="fa-light fa-xmark fa-2xl"></i>
                         </label>
                     </li>
